<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout android:layout_height="74dip"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:id="@+id/bottom_bar"
        android:orientation="horizontal"
        android:background="@color/cardview_light_background"
        >
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/left_button"
                android:layout_gravity="center"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_keyboard_arrow_left_black_24dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="28"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_walking_name"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_date"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/right_button"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp"/>
        </LinearLayout>
    </LinearLayout>
    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_above="@+id/bottom_bar"
        />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="96dp"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_num_flags_record"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                app:cardBackgroundColor="@android:color/black">

                <LinearLayout
                    android:id="@+id/layout_num_flags_record"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <ImageView
                        android:id="@+id/iv_num_flags_record"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="2dp"
                        android:layout_marginRight="2dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_flag_white" />

                    <TextView
                        android:id="@+id/tv_num_flags_record"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_time_record"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                app:cardBackgroundColor="@android:color/holo_red_light">

                <LinearLayout
                    android:id="@+id/layout_time_record"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <ImageView
                        android:id="@+id/iv_time_record"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_time" />

                    <TextView
                        android:id="@+id/tv_time_record"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_distance_record"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                app:cardBackgroundColor="@android:color/holo_blue_dark">

                <LinearLayout
                    android:id="@+id/layout_distance_record"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <ImageView
                        android:id="@+id/iv_distance_record"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_distance" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">

                        <TextView
                            android:id="@+id/tv_distance_record"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dp"
                            android:layout_marginStart="2dp"
                            android:text="@string/kilometer"
                            android:textColor="@android:color/white" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_step_record"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@android:color/holo_green_dark">

                <LinearLayout
                    android:id="@+id/layout_step_record"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <ImageView
                        android:id="@+id/iv_step_record"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_walk_white" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">

                        <TextView
                            android:id="@+id/tv_step_record"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dp"
                            android:layout_marginStart="2dp"
                            android:text="@string/step"
                            android:textColor="@android:color/white" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cv_speed_record"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                app:cardBackgroundColor="@android:color/holo_orange_light">

                <LinearLayout
                    android:id="@+id/layout_speed_record"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <ImageView
                        android:id="@+id/iv_spped_record"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="fitCenter"
                        android:src="@drawable/speedometer" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">

                        <TextView
                            android:id="@+id/tv_speed_record"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dp"
                            android:layout_marginStart="2dp"
                            android:text="@string/speed"
                            android:textColor="@android:color/white" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_show_date_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_date_range_white_24dp"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginBottom="46dp"
        android:layout_alignParentEnd="true"
        />
</RelativeLayout>